--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -43,6 +43,7 @@ models:
     intermediate:
       +materialized: view
     mart:
-      +materialized: tanble
+      +materialized: table
       finance:
         +schema: finance
+        
