--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,7 +36,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # using the `{{ config(...) }}` macro.
 
 models:
-  my new project:
+  my_new_project:
     # Applies to all files under models/example/
     staging:
       +materialized: view
@@ -46,4 +46,5 @@ models:
       +materialized: table
       finance:
         +schema: finance
-        
+
+
